2011-01-27  Abhishek Arya  <inferno@chromium.org>

        Reviewed by Dave Hyatt.

        Tests that we do not crash when adding a child in a table
        where the before child is not a table section.
        https://bugs.webkit.org/show_bug.cgi?id=53276

        * fast/table/before-child-non-table-section-add-table-crash-expected.txt: Added.
        * fast/table/before-child-non-table-section-add-table-crash.html: Added.

2011-01-31  Tony Chang  <tony@chromium.org>

        Reviewed by Eric Seidel.

        mac DRT should report RTL scroll offset relative to top right corner
        https://bugs.webkit.org/show_bug.cgi?id=53324

        Remove scroll offsets since these are at the origin.

        * platform/mac/fast/block/basic/truncation-rtl-expected.txt:
        * platform/mac/fast/blockflow/Kusa-Makura-background-canvas-expected.txt:
        * platform/mac/fast/multicol/vertical-rl/column-break-with-balancing-expected.txt:
        * platform/mac/fast/multicol/vertical-rl/float-paginate-complex-expected.txt:

2011-01-31  Yury Semikhatsky  <yurys@chromium.org>

        Unreviewed. Mark some tests as having wrong image results on Mac.

        * platform/chromium/test_expectations.txt:

2011-01-31  Mads Ager  <ager@chromium.org>

        Reviewed by Pavel Feldman.

        [V8] Update V8 specific layout test expectations
        https://bugs.webkit.org/show_bug.cgi?id=53423

        Error formatting has changed in V8. Updating chromium specific
        layout test expectations accordingly.

        * platform/chromium-mac/fast/js/array-every-expected.txt:
        * platform/chromium-mac/fast/js/instance-of-immediates-expected.txt:
        * platform/chromium-mac/fast/js/property-getters-and-setters-expected.txt:
        * platform/chromium-mac/storage/transaction-error-callback-expected.txt:
        * platform/chromium-mac/svg/dom/svgpath-out-of-bounds-getPathSeg-expected.txt:
        * platform/chromium-win/fast/js/array-every-expected.txt: