@@ -1,0 +1,16 @@
+<html>
+    <script>
+        window.onload = function()
+        {
+            if (window.layoutTestController)
+                layoutTestController.dumpAsText();
+
+            document.getElementById('content').innerHTML = "PASS: rendered counter nodes without crashing.";
+        }
+    </script>
+    <iframe src='resources/counter-crash-frame-src.html'>
+    </iframe>
+    <div id='content'>
+    FAIL
+    </div>
+</html>
