@@ -1,0 +1,22 @@
+
+<script>
+function boom() {
+    var p = document.getElementById('p').cloneNode(false);
+    document.getElementById('fig').appendChild(p);
+
+    var count = document.getElementById('count').cloneNode(false);
+    document.getElementById('multi').appendChild(count);
+
+    document.location.reload();
+}
+</script>
+<body onload="boom();">
+    <spacer id='count' style='counter-increment: aaa 1;'>
+        <fig id='fig'>
+    </spacer>
+    <acronym>
+        <spacer style='counter-increment: aaa 1;'></spacer>
+    </acronym>
+    <multicol id='multi'></multicol>
+    <p id='p'></p>
+</body>
