@@ -1,3 +1,14 @@
+2011-01-31  Cris Neckar  <cdn@chromium.org>
+
+        Reviewed by Eric Seidel.
+
+        Tests for crash when cloning elements that reference counter nodes.
+        https://bugs.webkit.org/show_bug.cgi?id=53344
+
+        * http/tests/css/counter-crash-expected.txt: Added.
+        * http/tests/css/counter-crash.html: Added.
+        * http/tests/css/resources/counter-crash-frame-src.html: Added.
+
 2011-01-27  Abhishek Arya  <inferno@chromium.org>
 
         Reviewed by Dave Hyatt.
